--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
 body{
-    background-color:red;
-    background-image:url("bg.jpeg");
-    background-size:cover;
+     background-image: linear-gradient(red, white);
   }
